# Yaxi

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/clipboard/: Cargo.toml
examples/clipboard/src/: copy.rs  owners.rs  paste.rs
examples/ewmh/: Cargo.toml
examples/ewmh/src/: active_window.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
src/: bin.rs  lib.rs
src/clipboard/: atoms.rs  context.rs  error.rs  event.rs  mod.rs  model.rs
src/display/: auth.rs  error.rs  event.rs  mod.rs  parse.rs  proto.rs  request.rs  window.rs  xid.rs
src/ewmh/: mod.rs
src/extension/: mod.rs  xinerama.rs
src/keyboard/: mod.rs
src/proto/: mod.rs
src/window/: mod.rs
tests/: test_clipboard.rs
