[package]
name = "yaxi"
version = "0.1.51"
edition = "2021"

description = "A rust implementation of the x11 protocol"
readme = "README.md"
authors = ["Prox"]
repository = "https://github.com/proxin187/yaxi"
keywords = ["x11", "xcb", "xlib", "xproto", "protocol"]
categories = ["api-bindings", "os", "graphics"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "yaxi"
path = "src/lib.rs"

[features]
xinerama = []
clipboard = []
extras = []
ewmh = []

[dependencies]
log = "0.4"
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481

[dev-dependencies]
yaxi = { path = ".", features = ["clipboard", "xinerama", "extras", "ewmh"] }
serial_test = "3.2"

[workspace]
members = ["examples/*"]
